--- a/web/src/App.css
+++ b/web/src/App.css
@@ -1,3 +1,7 @@
+.babyrecord-container {
+  padding-top: 20%;
+}
+
 .giant-square {
   width: 100%;
   height: 220px;
@@ -8,10 +12,6 @@
   width: 100%;
   height: 160px;
   margin-top: 30px;
-}
-
-.stdform {
-  padding-top: 20%;
 }
 
 .stdform .row,
